Don't paint backgrounds with border radius on scrolling contents layer.

BUG=645941,645949
TEST=PaintLayerScrollableAreaTest.ShouldPaintBackgroundOntoScrollingContentsLayer
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2333743002
Cr-Commit-Position: refs/heads/master@{#418006}

Former-commit-id: a5e4a2686447be53c5fa482e10190ab568364efe